--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/sBFl67baZzW0k2ZiuAsKGP9cAK72/social-images/social-1769355974856-tahwell forum.jpg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/sBFl67baZzW0k2ZiuAsKGP9cAK72/uploads/1769357268589-1.jpeg">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
     <!-- Theme Color -->
